[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu Art/LevelSelect.png" type="Texture" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/Adventurer.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Levels and Menus/AreYouSure.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="AreYouSure" type="Node2D"]
script = ExtResource( 4 )

[node name="AreYouSure" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="AreYouSure"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="AreYouSure"]
margin_left = 91.0
margin_top = 40.0
margin_right = 242.0
margin_bottom = 78.0
theme = ExtResource( 2 )
custom_fonts/normal_font = SubResource( 1 )
text = "Start a New Game?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="AreYouSure"]
margin_left = 65.0
margin_top = 70.0
margin_right = 268.0
margin_bottom = 108.0
theme = ExtResource( 2 )
custom_fonts/normal_font = SubResource( 1 )
text = "(Erases previous progress)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="AreYouSure"]
margin_left = 130.0
margin_top = 98.0
margin_right = 187.0
margin_bottom = 138.0
custom_constants/separation = 14
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="AreYouSure/HBoxContainer"]
margin_right = 25.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../No")
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Yes"

[node name="No" type="Button" parent="AreYouSure/HBoxContainer"]
margin_left = 39.0
margin_right = 57.0
margin_bottom = 40.0
focus_neighbour_right = NodePath("../Yes")
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "No"
[connection signal="focus_entered" from="AreYouSure/HBoxContainer/Yes" to="." method="_on_Yes_focus_entered"]
[connection signal="pressed" from="AreYouSure/HBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="focus_entered" from="AreYouSure/HBoxContainer/No" to="." method="_on_No_focus_entered"]
[connection signal="pressed" from="AreYouSure/HBoxContainer/No" to="." method="_on_No_pressed"]
